flux/clusters/natsume/apps/longhorn/networkpolicy-alloy-metrics.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: longhorn-manager-alloy-metrics
  namespace: longhorn-system
spec:
  podSelector:
    matchLabels:
      app: longhorn-manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: alloy
      podSelector:
        matchLabels:
          app.kubernetes.io/name: alloy
          app.kubernetes.io/instance: alloy
    ports:
    - protocol: TCP
      port: 9500
